# beetlebot

beetlebot_ws/src/: CMakeLists.txt
beetlebot_ws/src/beetle/: Guide
beetlebot_ws/src/beetle/beetle_control/: CMakeLists.txt  package.xml  setup.py
beetlebot_ws/src/beetle/beetle_control/nodes/: beetle_control.py
beetlebot_ws/src/beetle/beetle_model/: CMakeLists.txt  package.xml
beetlebot_ws/src/beetle/beetle_model/launch/: robot_description.launch  world.launch
beetlebot_ws/src/beetle/beetle_model/rviz/: view_robot.rviz
beetlebot_ws/src/beetle/beetle_model/urdf/: beetle.xacro  beetle_robot.gazebo.xacro
