<?xml version="1.0"?>
<package format="2">
  <name>beetle_control</name>
  <version>0.0.0</version>
  <description>The beetle package</description>

  <maintainer email="javen.j.w.lin@gmail.com">Javen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
